--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>CenterLogistic</title>
@@ -27,6 +27,48 @@
             </div>
         </div>
     </header>
+
+    <div class="intro">
+        <div class="container">
+            <div class="intro__inner">
+
+                <div class="request-form request-form--intro">
+                    <div class="request-form__header">
+                        <h3 class="request-form-title">Get Callback</h3>
+                        <div class="request-form__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</div>
+                    </div>
+
+                    <div class="request-form__content">
+                        <form action="/" method="post">
+                            <div class="form__group">
+                                <input class="input input--user" type="text" placeholder="Your name">
+                            </div>
+                            <div class="form__group">
+                                <input class="input input--phone" type="tel" placeholder="Your phone">
+                            </div>
+                            <div class="form__group">
+                                <input class="input input--email" type="email" placeholder="Your email">
+                            </div>
+                            <button class="btn btn--orange btn--block" type="submit">Call me back</button>
+
+                        </form>
+                    </div>
+
+                </div><!-- /request-form -->
+
+                <div class="intro__text">
+                    <div class="intro__countries">
+                    USA, Europe, Asia
+                    </div>
+                    <h1 class="intro__title">
+                    <span class="intro__titile-amp">&amp;</span>
+                    Trans<br>Logistic
+                    </h1>
+                </div>
+
+            </div> <!-- /intro__inner -->
+        </div> <!-- /container -->
+    </div> <!-- /intro -->
 
 </body>
 </html>
