--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div> <!-- /container -->
     </div> <!-- /intro -->
 
-<!-- Services-->
+<!-- Services -->
     <section class="section">
         <div class="container">
             <div class="services">
@@ -117,6 +117,92 @@
 
             </div> <!-- /services -->
         </div><!-- /container -->
+    </section>
+
+<!-- Clients -->
+    <section class="section section--map">
+        <div class="container">
+            <h2 class="section__title"><span>Our</span> clients</h2>
+
+            <div class="clients">
+                <div class="clients__logo">
+                    <ul class="clients__list">
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/atica.svg" alt="">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/hex-lab.svg" alt="">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/amara.svg" alt="">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/muzica-2.svg" alt="">
+                            </a>
+                        </li>
+
+                       <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/solaytic.svg" alt="">
+                            </a>
+                        </li>
+
+                       <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/hexa.svg" alt="">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/utosia-2.svg" alt="">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="#" target="_blank">
+                                <img src="assets/images/clients/fox-hub.svg" alt="">
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </div> <!-- /clients__logo -->
+
+                <div class="clients__reviews">
+                    <div class="reviews">
+                        <div class="reviews__item">
+                            <div class="reviews__header">
+                                <img class="reviews__photo" src="https://placehold.it/100" alt="">
+                                <div class="reviews__header-content">
+                                    <div class="reviews__name">John Smith</div>
+                                    <div class="reviews__company">FOX Hub CEO</div>
+                                </div>
+                            </div>
+                            <div class="reviews__content">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat explicabo ea error itaque fugit, libero iusto. Quisquam dignissimos est reiciendis odio quos. Et totam, autem omnis fugit reprehenderit laboriosam doloremque!</p>
+                                <p>Consectetur adipisicing elit. Repellat explicabo ea error itaque fugit, libero iusto. Quisquam dignissimos est reiciendis odio quos. Et totam, autem omnis fugit reprehenderit laboriosam doloremque!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- /clients__reviews -->
+
+            </div> <!-- /clients -->
+
+            <a class="btn btn--orange" href="#">Become a client</a>
+            <span class="clients-love">we love our clients</span>
+
+        </div> <!-- /container -->
     </section>
 
 </body>
