--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                             <div class="form__group">
                                 <input class="input input--email" type="email" placeholder="Your email">
                             </div>
-                            <button class="btn btn--orange btn--block" type="submit">Call me back</button>
+                            <button class="btn btn--orange btn--block" type="submit">
+                                <span>Call me back</span>
+                            </button>
 
                         </form>
                     </div>
@@ -199,7 +201,9 @@
 
             </div> <!-- /clients -->
 
-            <a class="btn btn--orange" href="#">Become a client</a>
+            <button class="btn btn--orange btn--shadow" type="button">
+                <span>Become a client</span>
+            </button>
             <span class="clients-love">we love our clients</span>
 
         </div> <!-- /container -->
@@ -312,9 +316,48 @@
             <h4 class="mission__subtitle">Book your Cargo now &amp; Your job just got a lot easier</h4>
         </div>
         <div class="text-center">
-            <button class="btn btn--orange">Become a client</button>
+            <button class="btn btn--orange btn--shadow">
+                <span>Become a client</span>
+            </button>
         </div>
     </div>
+</section>
+
+<!-- Article -->
+
+<section class="section">
+    <div class="container">
+        <h2 class="section__title"><span>Interesting</span> to read</h2>
+
+        <div class="article">
+
+            <article class="article__item">
+                <h4 class="article__title">
+                    <a href="#">News title</a>
+                </h4>
+                <div class="article__text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                </div>
+                <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
+            </article>
+
+            <article class="article__item">
+                <h4 class="article__title">
+                    <a href="#">News title</a>
+                </h4>
+                <div class="article__text">
+                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                </div>
+                <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
+            </article>
+
+        </div> <!-- /article -->
+
+        <a class="btn btn--orange btn--shadow" href="#">
+            <span>Visit blog</span>
+        </a>
+
+    </div><!-- /container -->
 </section>
 
 
