--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <img src="assets/images/logo.svg" alt="CenterLogistic">
+                <a href="index.html">
+                    <img src="assets/images/logo.svg" alt="CenterLogistic">
+                </a>
 
                 <nav class="nav">
                     <a class="nav__link active" href="#">Services</a>
@@ -353,7 +355,7 @@
 
         </div> <!-- /article -->
 
-        <a class="btn btn--orange btn--shadow" href="#">
+        <a class="btn btn--orange btn--shadow" href="blog.html">
             <span>Visit blog</span>
         </a>
 
