--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,8 @@
     <title>CenterLogistic</title>
 </head>
 <body>
-<!--    Header  -->
+<div class="page">
+    <!--    Header  -->
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -19,120 +20,121 @@
                 </a>
 
                 <nav class="nav">
-                    <a class="nav__link" href="ìndex.html">Home page</a>
-                    <a class="nav__link" href="#">Privacy Policy </a>
-                    <a class="nav__link" href="#">Terms &amp; Conditions</a>
+                    <a class="nav__link" href="index.html">Home page</a>
+                    <a class="nav__link active" href="blog.html">Blog</a>
+                    <a class="nav__link" href="text.html">Privacy Policy </a>
+                    <a class="nav__link" href="text2.html">Terms &amp; Conditions</a>
                 </nav>
             </div>
         </div>
     </header>
 
-<!-- Intro -->
-<div class="intro intro--blog"></div>
+    <!-- Intro -->
+    <div class="intro intro--blog"></div>
 
-<!-- Main -->
-<section class="section">
-    <div class="container">
-        <main class="main">
-            <div class="main__col">
-                <h1 class="section__title"><span>Interesting</span> to read</h1>
-                <div class="article atcicle--column">
+    <!-- Main -->
+    <section class="section section--last">
+        <div class="container">
+            <main class="main">
+                <div class="main__col">
+                    <h1 class="section__title"><span>Interesting</span> to read</h1>
+                    <div class="article atcicle--column">
 
-                    <article class="article__item">
-                        <h4 class="article__title">
-                            <a href="#">News title</a>
-                        </h4>
-                        <div class="article__text">
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-                        </div>
-                        <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
-                    </article>
-
-                    <article class="article__item">
-                        <h4 class="article__title">
-                            <a href="#">News title</a>
-                        </h4>
-                        <div class="article__text">
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-                        </div>
-                        <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
-                    </article>
-
-                     <article class="article__item">
-                        <h4 class="article__title">
-                            <a href="#">News title</a>
-                        </h4>
-                        <div class="article__text">
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-                        </div>
-                        <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
-                    </article>
-
-                    <article class="article__item">
-                        <h4 class="article__title">
-                            <a href="#">News title</a>
-                        </h4>
-                        <div class="article__text">
-                            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-                        </div>
-                        <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
-                    </article>
-
-                </div> <!-- /article -->
-                <a class="btn btn--orange" href="index.html">
-                    <span>Back to main</span>
-                </a>
-            </div><!-- /main__col -->
-
-            <div class="main__col">
-                <div class="request-form request-form--right">
-                    <div class="request-form__header">
-                        <h3 class="request-form-title">Get Callback</h3>
-                        <div class="request-form__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</div>
-                    </div>
-
-                    <div class="request-form__content">
-                        <form action="/" method="post">
-                            <div class="form__group">
-                                <input class="input input--user" type="text" placeholder="Your name">
+                        <article class="article__item">
+                            <h4 class="article__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="article__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
                             </div>
-                            <div class="form__group">
-                                <input class="input input--phone" type="tel" placeholder="Your phone">
+                            <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
+                        </article>
+
+                        <article class="article__item">
+                            <h4 class="article__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="article__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
                             </div>
-                            <div class="form__group">
-                                <input class="input input--email" type="email" placeholder="Your email">
+                            <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
+                        </article>
+
+                         <article class="article__item">
+                            <h4 class="article__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="article__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
                             </div>
-                            <button class="btn btn--orange btn--block" type="submit">
-                                <span>Call me back</span>
-                            </button>
+                            <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
+                        </article>
 
-                        </form>
-                    </div>
+                        <article class="article__item">
+                            <h4 class="article__title">
+                                <a href="#">News title</a>
+                            </h4>
+                            <div class="article__text">
+                                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+                            </div>
+                            <time class="article__date" pupdate="21-03-2019 19:00">21 March, 2019</time>
+                        </article>
 
-                </div><!-- /request-form -->
-            </div>
-        </main>
-    </div> <!-- /container -->
-</section>
+                    </div> <!-- /article -->
+                    <a class="btn btn--orange" href="index.html">
+                        <span>Back to home</span>
+                    </a>
+                </div><!-- /main__col -->
 
-<!-- Footer -->
-<footer class="footer">
-    <div class="container">
-        <img src="assets/images/logo-black.svg" alt="logo">
-        <address class="footer__contakts">
-            <p>New York, Street, ZIP code</p>
-            <p>
-                Call Us: <a href="tel:+9948373123">+9948373123</a> or E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a>
-            </p>
-        </address>
-        <nav class="footer__nav">
-            <a href="">Terms &amp; Contidions</a>
-            <a href="">Privacy Policy</a>
-            <a href="">Our blog</a>
-        </nav>
-    </div>
-</footer>
+                <div class="main__col">
+                    <div class="request-form request-form--right">
+                        <div class="request-form__header">
+                            <h3 class="request-form-title">Get Callback</h3>
+                            <div class="request-form__text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</div>
+                        </div>
 
+                        <div class="request-form__content">
+                            <form action="/" method="post">
+                                <div class="form__group">
+                                    <input class="input input--user" type="text" placeholder="Your name">
+                                </div>
+                                <div class="form__group">
+                                    <input class="input input--phone" type="tel" placeholder="Your phone">
+                                </div>
+                                <div class="form__group">
+                                    <input class="input input--email" type="email" placeholder="Your email">
+                                </div>
+                                <button class="btn btn--orange btn--block" type="submit">
+                                    <span>Call me back</span>
+                                </button>
+
+                            </form>
+                        </div>
+
+                    </div><!-- /request-form -->
+                </div>
+            </main>
+        </div> <!-- /container -->
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <img src="assets/images/logo-black.svg" alt="logo">
+            <address class="footer__contakts">
+                <p>New York, Street, ZIP code</p>
+                <p>
+                    Call Us: <a href="tel:+9948373123">+9948373123</a> or E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a>
+                </p>
+            </address>
+            <nav class="footer__nav">
+                <a href="">Terms &amp; Contidions</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Our blog</a>
+            </nav>
+        </div>
+    </footer>
+</div>
 
 </body>
 </html>
