--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="device-width, initial-scale=1">
     <title>CenterLogistic</title>
 </head>
 <body>
 <div class="page">
     <!--    Header  -->
-    <header class="header">
+    <header class="header header--dark">
         <div class="container">
             <div class="header__inner">
                 <a href="index.html">
-                    <img src="assets/images/logo.svg" alt="CenterLogistic">
+                    <img class="img" src="assets/images/logo.svg" alt="CenterLogistic">
                 </a>
 
                 <nav class="nav">
@@ -27,6 +28,10 @@
                     <a class="nav__link" href="#">News</a>
                     <a class="nav__link" href="#">Contact Us</a>
                 </nav>
+
+                <button class="burger" type="button">
+                    <img class="burger__icon" src="assets/images/burger.svg" alt="">
+                </button>
             </div>
         </div>
     </header>
