Media Services Clients Reviews

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <div class="container">
                 <div class="services">
                     <h2 class="services__main-title">Services</h2>
+
                     <div class="services__item">
                         <h4 class="services__title">Ground shipping</h4>
                         <div class="services__text">
@@ -139,49 +140,49 @@
                         <ul class="clients__list">
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/atica.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/atica.svg" alt="">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/hex-lab.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/hex-lab.svg" alt="">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/amara.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/amara.svg" alt="">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/muzica-2.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/muzica-2.svg" alt="">
                                 </a>
                             </li>
 
                            <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/solaytic.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/solaytic.svg" alt="">
                                 </a>
                             </li>
 
                            <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/hexa.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/hexa.svg" alt="">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/utosia-2.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/utosia-2.svg" alt="">
                                 </a>
                             </li>
 
                             <li>
                                 <a href="#" target="_blank">
-                                    <img src="assets/images/clients/fox-hub.svg" alt="">
+                                    <img class="clients__list-logo img" src="assets/images/clients/fox-hub.svg" alt="">
                                 </a>
                             </li>
 
