--- a/index.html
+++ b/index.html
@@ -219,8 +219,9 @@
         </section>
 
     <!-- Benefits -->
-    <div class="section">
+    <section class="section">
         <div class="container">
+           <h2 class="section__title"><span>Our</span> benefits</h2>
             <div class="benefits">
 
                 <div class="benefits__col">
@@ -258,7 +259,7 @@
 
             </div><!-- /benefits -->
         </div><!-- /container -->
-    </div><!-- /section -->
+    </section>
 
     <!-- Team -->
     <section class="section section--gray">
@@ -267,48 +268,54 @@
 
            <div class="team">
                <div class="team__col">
-                   <div class="team__item"><img class="img team__photo" src="assets/images/team/team_1.jpg" alt=""></div>
-                   <div class="team__name">John Smith</div>
-                   <div class="team__prof">Logistic manager - 8 years experience</div>
-                   <ul class="team__contacts">
+                   <div class="team__item">
+                       <img class="img team__photo" src="assets/images/team/team_1.jpg" alt="">
+                       <div class="team__name">John Smith</div>
+                       <div class="team__prof">Logistic manager - 8 years experience</div>
+                       <ul class="team__contacts">
 
-                       <li><img class="team__contacts-icon" src="assets/images/mail-black-icon.svg" alt="">
-                       <a href="mailto:john@centerlogistic.com">john@centerlogistic.com</a></li>
+                           <li><img class="team__contacts-icon" src="assets/images/mail-black-icon.svg" alt="">
+                           <a href="mailto:john@centerlogistic.com">john@centerlogistic.com</a></li>
 
-                       <li><img class="team__contacts-icon" src="assets/images/phone-black-icon.svg" alt="">
-                       <a href="tel:+380971251254">+380971251254</a></li>
+                           <li><img class="team__contacts-icon" src="assets/images/phone-black-icon.svg" alt="">
+                           <a href="tel:+380971251254">+380971251254</a></li>
 
-                   </ul>
+                       </ul>
+                   </div>
                </div>
 
                <div class="team__col">
-                   <div class="team__item"><img class="img team__photo" src="assets/images/team/team_2.jpg" alt=""></div>
-                   <div class="team__name">Daniel Kore</div>
-                   <div class="team__prof">Software engineer</div>
-                   <ul class="team__contacts">
+                       <div class="team__item">
+                            <img class="img team__photo" src="assets/images/team/team_2.jpg" alt="">
+                           <div class="team__name">Daniel Kore</div>
+                           <div class="team__prof">Software engineer</div>
+                           <ul class="team__contacts">
 
-                       <li><img class="team__contacts-icon" src="assets/images/mail-black-icon.svg" alt="">
-                       <a href="mailto:daniel@centerlogistic.com">daniel@centerlogistic.com</a></li>
+                               <li><img class="team__contacts-icon" src="assets/images/mail-black-icon.svg" alt="">
+                               <a href="mailto:daniel@centerlogistic.com">daniel@centerlogistic.com</a></li>
 
-                       <li><img class="team__contacts-icon" src="assets/images/phone-black-icon.svg" alt="">
-                       <a href="tel:+380972325225">+380972325225</a></li>
+                               <li><img class="team__contacts-icon" src="assets/images/phone-black-icon.svg" alt="">
+                               <a href="tel:+380972325225">+380972325225</a></li>
 
-                   </ul>
+                           </ul>
+                   </div>
                </div>
 
            <div class="team__col">
-                   <div class="team__item"><img class="img team__photo" src="assets/images/team/team_3.jpg" alt=""></div>
-                   <div class="team__name">Anna Filler</div>
-                   <div class="team__prof">Marketing specialist - 10 years experience</div>
-                   <ul class="team__contacts">
+                   <div class="team__item">
+                       <img class="img team__photo" src="assets/images/team/team_3.jpg" alt="">
+                       <div class="team__name">Anna Filler</div>
+                       <div class="team__prof">Marketing specialist - 10 years experience</div>
+                       <ul class="team__contacts">
 
-                       <li><img class="team__contacts-icon" src="assets/images/mail-black-icon.svg" alt="">
-                       <a href="mailto:anna@centerlogistic.com">anna@centerlogistic.com</a></li>
+                           <li><img class="team__contacts-icon" src="assets/images/mail-black-icon.svg" alt="">
+                           <a href="mailto:anna@centerlogistic.com">anna@centerlogistic.com</a></li>
 
-                       <li><img class="team__contacts-icon" src="assets/images/phone-black-icon.svg" alt="">
-                       <a href="tel:+38097353456">+38097353456</a></li>
+                           <li><img class="team__contacts-icon" src="assets/images/phone-black-icon.svg" alt="">
+                           <a href="tel:+38097353456">+38097353456</a></li>
 
-                   </ul>
+                       </ul>
+                   </div>
                </div>
 
 
