Mesia Modal Blog Text Text2

--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="device-width, initial-scale=1">
     <title>CenterLogistic</title>
 </head>
 <body>
@@ -25,6 +26,10 @@
                     <a class="nav__link" href="text.html">Privacy Policy </a>
                     <a class="nav__link" href="text2.html">Terms &amp; Conditions</a>
                 </nav>
+
+                <button class="burger" type="button">
+                    <img class="burger__icon" src="assets/images/burger.svg" alt="">
+                </button>
             </div>
         </div>
     </header>
@@ -36,7 +41,7 @@
     <section class="section section--last">
         <div class="container">
             <main class="main">
-                <div class="main__col">
+                <div class="main__col main__col--left">
                     <h1 class="section__title"><span>Interesting</span> to read</h1>
                     <div class="article atcicle--column">
 
@@ -86,7 +91,7 @@
                     </a>
                 </div><!-- /main__col -->
 
-                <div class="main__col">
+                <div class="main__col main__col--right">
                     <div class="request-form request-form--right">
                         <div class="request-form__header">
                             <h3 class="request-form-title">Get Callback</h3>
