--- a/text.html
+++ b/text.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <meta name="viewport" content="device-width, initial-scale=1">
     <title>CenterLogistic</title>
 </head>
 <body>
@@ -24,6 +25,10 @@
                     <a class="nav__link active" href="text.html">Privacy Policy </a>
                     <a class="nav__link" href="text2.html">Terms &amp; Conditions</a>
                 </nav>
+
+                <button class="burger" type="button">
+                    <img class="burger__icon" src="assets/images/burger.svg" alt="">
+                </button>
             </div>
         </div>
     </header>
