Add jquery and change background header on scroll

--- a/blog.html
+++ b/blog.html
@@ -141,5 +141,11 @@
     </footer>
 </div>
 
+
+<!-- Jquery -->
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="assets/js/app.js"></script>
+
 </body>
 </html>
