--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="page">
     <!--    Header  -->
-    <header class="header header--dark">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
                 <a href="index.html">
@@ -36,7 +36,7 @@
         </div>
     </header>
 
-        <div class="intro">
+        <div class="intro" id="intro">
             <div class="container">
                 <div class="intro__inner">
 
@@ -466,7 +466,10 @@
     </div><!-- /modal__inner -->
 </div><!-- /modal -->
 
+<!-- Jquery -->
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="assets/js/app.js"></script>
 
 
 </body>
