--- a/text2.html
+++ b/text2.html
@@ -92,5 +92,10 @@
     </footer>
 </div>
 
+<!-- Jquery -->
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="assets/js/app.js"></script>
+
 </body>
 </html>
