Smoth scroll to section

--- a/text.html
+++ b/text.html
@@ -13,7 +13,7 @@
 <body>
 <div class="page">
     <!--    Header  -->
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
                 <a href="index.html">
@@ -34,7 +34,7 @@
     </header>
 
     <!-- Intro -->
-    <div class="intro intro--text"></div>
+    <div class="intro intro--text" id="intro"></div>
 
     <!-- Text -->
     <section class="section section--last">
@@ -96,7 +96,7 @@
 
 <!-- Jquery -->
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="assets/js/app.js"></script>
 
 </body>
