--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <body>
 <div class="page">
     <!--    Header  -->
-    <header class="header">
+    <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
                 <a href="index.html">
@@ -35,7 +35,7 @@
     </header>
 
     <!-- Intro -->
-    <div class="intro intro--blog"></div>
+    <div class="intro intro--blog" id="intro"></div>
 
     <!-- Main -->
     <section class="section section--last">
@@ -144,7 +144,7 @@
 
 <!-- Jquery -->
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="assets/js/app.js"></script>
 
 </body>
