--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
                 </a>
 
                 <nav class="nav">
-                    <a class="nav__link active" href="#">Services</a>
-                    <a class="nav__link" href="#">Clients</a>
-                    <a class="nav__link" href="#">Benefits</a>
-                    <a class="nav__link" href="#">Team</a>
-                    <a class="nav__link" href="#">News</a>
+                    <a class="nav__link active" data-scroll="#services" href="#">Services</a>
+                    <a class="nav__link" data-scroll="#clients" href="#">Clients</a>
+                    <a class="nav__link" data-scroll="#benefits" href="#">Benefits</a>
+                    <a class="nav__link" data-scroll="#team" href="#">Team</a>
+                    <a class="nav__link" data-scroll="#mission" href="#">Mission</a>
+                    <a class="nav__link" data-scroll="#news" href="#">News</a>
                     <a class="nav__link" href="#">Contact Us</a>
                 </nav>
 
@@ -81,7 +82,7 @@
         </div> <!-- /intro -->
 
     <!-- Services -->
-        <section class="section">
+        <section class="section" id="services">
             <div class="container">
                 <div class="services">
                     <h2 class="services__main-title">Services</h2>
@@ -131,7 +132,7 @@
         </section>
 
     <!-- Clients -->
-        <section class="section section--map">
+        <section class="section section--map" id="clients">
             <div class="container">
                 <h2 class="section__title"><span>Our</span> clients</h2>
 
@@ -219,7 +220,7 @@
         </section>
 
     <!-- Benefits -->
-    <section class="section">
+    <section class="section" id="benefits">
         <div class="container">
            <h2 class="section__title"><span>Our</span> benefits</h2>
             <div class="benefits">
@@ -262,7 +263,7 @@
     </section>
 
     <!-- Team -->
-    <section class="section section--gray">
+    <section class="section section--gray" id="team">
        <div class="container">
            <h4 class="section__title"><span>Our</span> team</h4>
 
@@ -324,7 +325,7 @@
     </section>
 
     <!-- Mission -->
-    <section class="section">
+    <section class="section" id="mission">
         <div class="container">
             <h2 class="missin-title">Our mission</h2>
             <div class="mission">
@@ -341,7 +342,7 @@
 
     <!-- Article -->
 
-    <section class="section section--last">
+    <section class="section section--last" id="news">
         <div class="container">
             <h2 class="section__title"><span>Interesting</span> to read</h2>
 
@@ -468,7 +469,7 @@
 
 <!-- Jquery -->
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="assets/js/app.js"></script>
 
 
