--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <header class="header" id="header">
         <div class="container">
             <div class="header__inner">
-                <a href="index.html">
+                <a href="#" data-scroll="#intro">
                     <img class="img" src="assets/images/logo.svg" alt="CenterLogistic">
                 </a>
 
-                <nav class="nav">
-                    <a class="nav__link active" data-scroll="#services" href="#">Services</a>
+                <nav class="nav" id="nav">
+                    <a class="nav__link" data-scroll="#services" href="#">Services</a>
                     <a class="nav__link" data-scroll="#clients" href="#">Clients</a>
                     <a class="nav__link" data-scroll="#benefits" href="#">Benefits</a>
                     <a class="nav__link" data-scroll="#team" href="#">Team</a>
@@ -82,7 +82,7 @@
         </div> <!-- /intro -->
 
     <!-- Services -->
-        <section class="section" id="services">
+        <section class="section" id="services" data-scrollspy="#services">
             <div class="container">
                 <div class="services">
                     <h2 class="services__main-title">Services</h2>
@@ -132,7 +132,7 @@
         </section>
 
     <!-- Clients -->
-        <section class="section section--map" id="clients">
+        <section class="section section--map" id="clients" data-scrollspy="#clients">
             <div class="container">
                 <h2 class="section__title"><span>Our</span> clients</h2>
 
@@ -220,7 +220,7 @@
         </section>
 
     <!-- Benefits -->
-    <section class="section" id="benefits">
+    <section class="section" id="benefits" data-scrollspy="#benefits">
         <div class="container">
            <h2 class="section__title"><span>Our</span> benefits</h2>
             <div class="benefits">
@@ -263,7 +263,7 @@
     </section>
 
     <!-- Team -->
-    <section class="section section--gray" id="team">
+    <section class="section section--gray" id="team" data-scrollspy="#team">
        <div class="container">
            <h4 class="section__title"><span>Our</span> team</h4>
 
@@ -325,7 +325,7 @@
     </section>
 
     <!-- Mission -->
-    <section class="section" id="mission">
+    <section class="section" id="mission" data-scrollspy="#mission">
         <div class="container">
             <h2 class="missin-title">Our mission</h2>
             <div class="mission">
@@ -342,7 +342,7 @@
 
     <!-- Article -->
 
-    <section class="section section--last" id="news">
+    <section class="section section--last" id="news" data-scrollspy="#news">
         <div class="container">
             <h2 class="section__title"><span>Interesting</span> to read</h2>
 
