--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
                 </div> <!-- /clients -->
 
-                <button class="btn btn--orange btn--shadow" type="button">
+                <button class="btn btn--orange btn--shadow" type="button" data-modal="#bicomeClientModal">
                     <span>Become a client</span>
                 </button>
                 <span class="clients-love">we love our clients</span>
@@ -432,7 +432,7 @@
                     <p>E-mail: <a href="mailto:hello@centerlogistic.com">hello@centerlogistic.com</a></p>
                 </address>
             </div>
-            <button class="modal__close" type="button">
+            <button class="modal__close" type="button" data-modal-close>
                 <img src="assets/images/close.svg" alt="">
             </button>
         </div><!-- /modal__content -->
