--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
     <meta name="viewport" content="device-width, initial-scale=1">
     <title>CenterLogistic</title>
 </head>
@@ -38,6 +40,15 @@
     </header>
 
         <div class="intro" id="intro">
+
+            <div class="intro__slider" id="introSlider">
+                <div class="into__item">
+                    <img class="intro__slider-photo" src="assets/images/intro%20bg.jpg" alt="">
+                </div>
+                <div class="intro__item">
+                    <img class="intro__slider-photo" src="assets/images/intro%20bg.jpg" alt="">
+                </div>
+           </div>
             <div class="container">
                 <div class="intro__inner">
 
@@ -76,6 +87,11 @@
                         Trans<br>Logistic
                         </h1>
                     </div>
+
+                   <div class="intro__slider-arrows">
+                       <button class="intro__slider-btn intro__slider--prev" id="introSliderPrev" type="button">Prev</button>
+                       <button class="intro__slider-btn intro__slider--next" id="introSliderNext" type="button">Next</button>
+                   </div>
 
                 </div> <!-- /intro__inner -->
             </div> <!-- /container -->
@@ -470,6 +486,7 @@
 <!-- Jquery -->
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="assets/js/slick.min.js"></script>
 <script src="assets/js/app.js"></script>
 
 
