--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </div> <!-- /clients__logo -->
 
                     <div class="clients__reviews">
-                        <div class="reviews">
+                        <div class="reviews" id="reviewsSlider">
                             <div class="reviews__item">
                                 <div class="reviews__header">
                                     <img class="reviews__photo" src="https://placehold.it/100" alt="">
@@ -222,7 +222,21 @@
                                     <p>Consectetur adipisicing elit. Repellat explicabo ea error itaque fugit, libero iusto. Quisquam dignissimos est reiciendis odio quos. Et totam, autem omnis fugit reprehenderit laboriosam doloremque!</p>
                                 </div>
                             </div>
-                        </div>
+
+                            <div class="reviews__item">
+                                <div class="reviews__header">
+                                    <img class="reviews__photo" src="https://placehold.it/100" alt="">
+                                    <div class="reviews__header-content">
+                                        <div class="reviews__name">John Smith</div>
+                                        <div class="reviews__company">FOX Hub CEO</div>
+                                    </div>
+                                </div>
+                                <div class="reviews__content">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat explicabo ea error itaque fugit, libero iusto. Quisquam dignissimos est reiciendis odio quos. Et totam, autem omnis fugit reprehenderit laboriosam doloremque!</p>
+                                    <p>Consectetur adipisicing elit. Repellat explicabo ea error itaque fugit, libero iusto. Quisquam dignissimos est reiciendis odio quos. Et totam, autem omnis fugit reprehenderit laboriosam doloremque!</p>
+                                </div>
+                            </div>
+                        </div><!-- /reviews -->
                     </div> <!-- /clients__reviews -->
 
                 </div> <!-- /clients -->
