--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="intro" id="intro">
 
             <div class="intro__slider" id="introSlider">
-                <div class="into__item">
-                    <img class="intro__slider-photo" src="assets/images/intro%20bg.jpg" alt="">
+                <div class="slider-item">
+                    <img class="intro__slider-item" src="assets/images/intro%20bg.jpg" alt="">
                 </div>
-                <div class="intro__item">
-                    <img class="intro__slider-photo" src="assets/images/intro%20bg.jpg" alt="">
+                <div class="slider-item">
+                    <img class="intro__slider-item" src="assets/images/intro%20bg.jpg" alt="">
                 </div>
            </div>
             <div class="container">
