--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/aos.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
     <meta name="viewport" content="device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicons/manifest.json">
+    <link rel="mask-icon" href="assets/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="##004AF2">
+
+
     <title>CenterLogistic</title>
 </head>
 <body>
@@ -30,7 +40,7 @@
                     <a class="nav__link" data-scroll="#team" href="#">Team</a>
                     <a class="nav__link" data-scroll="#mission" href="#">Mission</a>
                     <a class="nav__link" data-scroll="#news" href="#">News</a>
-                    <a class="nav__link" href="#">Contact Us</a>
+                    <a class="nav__link" href="#" data-modal="#bicomeClientModal">Contact Us</a>
                 </nav>
 
                 <button class="burger" type="button" id="navToggle">
@@ -367,7 +377,7 @@
                 <h4 class="mission__subtitle">Book your Cargo now &amp; Your job just got a lot easier</h4>
             </div>
             <div class="text-center">
-                <button class="btn btn--orange btn--shadow">
+                <button class="btn btn--orange btn--shadow" data-modal="#bicomeClientModal">
                     <span>Become a client</span>
                 </button>
             </div>
@@ -422,9 +432,9 @@
                 </p>
             </address>
             <nav class="footer__nav">
-                <a href="">Terms &amp; Contidions</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Our blog</a>
+                <a href="text2.html">Terms &amp; Contidions</a>
+                <a href="text.html">Privacy Policy</a>
+                <a href="blog.html">Our blog</a>
             </nav>
         </div>
     </footer>
@@ -503,7 +513,7 @@
 
 <!-- Jquery -->
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="assets/js/jquery-3.5.1.min.js"></script>
 <script src="assets/js/slick.min.js"></script>
 <script src="assets/js/aos.js"></script>
 <script src="assets/js/app.js"></script>
