--- a/text2.html
+++ b/text2.html
@@ -6,8 +6,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <meta name="viewport" content="device-width, initial-scale=1">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/favicons/manifest.json">
+    <link rel="mask-icon" href="assets/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="##004AF2">
+
     <title>CenterLogistic</title>
 </head>
 <body>
@@ -20,14 +31,17 @@
                     <img src="assets/images/logo.svg" alt="CenterLogistic">
                 </a>
 
-                <nav class="nav">
+                <nav class="nav" id="nav">
                     <a class="nav__link" href="index.html">Home page</a><a class="nav__link" href="blog.html">Blog</a>
                     <a class="nav__link" href="text.html">Privacy Policy </a>
                     <a class="nav__link active" href="text2.html">Terms &amp; Conditions</a>
                 </nav>
 
-                <button class="burger" type="button">
-                    <img class="burger__icon" src="assets/images/burger.svg" alt="">
+                <button class="burger" type="button" id="navToggle">
+                    <span class="burger__line">1</span>
+                    <span class="burger__line">2</span>
+                    <span class="burger__line">3</span>
+                    <span class="burger__line">4</span>
                 </button>
             </div>
         </div>
@@ -84,9 +98,9 @@
                 </p>
             </address>
             <nav class="footer__nav">
-                <a href="">Terms &amp; Contidions</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Our blog</a>
+                <a href="text2.html">Terms &amp; Contidions</a>
+                <a href="text.html">Privacy Policy</a>
+                <a href="blog.html">Our blog</a>
             </nav>
         </div>
     </footer>
@@ -94,7 +108,9 @@
 
 <!-- Jquery -->
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="assets/js/jquery-3.5.1.min.js"></script>
+<script src="assets/js/slick.min.js"></script>
+<script src="assets/js/aos.js"></script>
 <script src="assets/js/app.js"></script>
 
 </body>
